<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/alvo_ou_tall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="220dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ubuntu_light"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/title_log_in"
            android:textSize="34sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_marginTop="295dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/password_usuari"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="585dp"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#0B735F"
            android:text="@string/button_log_in" />

        <Button
            android:id="@+id/btn_singup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#0B735F"
            android:text="Sing up" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>